fixed table text wrap

--- a/teste_de_mesa/core/static/css/styles.css
+++ b/teste_de_mesa/core/static/css/styles.css
@@ -85,7 +85,6 @@ header p {
 .table-wrapper {
     width: 80%;
     overflow: auto;
-    white-space: nowrap;
     text-align: left;
 }
 
@@ -93,7 +92,7 @@ header p {
     padding: 5px;
     min-width: 150px;
     max-width: 150px;
-    flex-wrap: wrap;
+    
 }
 
 /* button */
